src/objects/Google_Keys__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>access_token__c</fullName>
        <label>Access Token</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>client_id__c</fullName>
        <defaultValue>&quot;448400875680-1c97kgejs0fg5mlsfq6r0g7i4lpgl275.apps.googleusercontent.com&quot;</defaultValue>
        <label>Client Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>client_secret__c</fullName>
        <defaultValue>&quot;fbRcOJwuGmw21VVed34_aFlo&quot;</defaultValue>
        <label>Client Secret</label>
        <type>TextArea</type>
    </fields>
    <label>Google Keys</label>
</CustomObject>